[gd_scene load_steps=2 format=3 uid="uid://lovqp5t8lm65"]

[ext_resource type="Script" path="res://UI.gd" id="1_dopvi"]

[node name="UI" type="CanvasLayer"]
layer = 0
follow_viewport_enabled = true

[node name="Control" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dopvi")
vertical_bar_size = Vector2(18, 160)
vertical_bar_margin = 10.0
xp_bar_height = 4.0
bar_spacing = 20.0
background_opacity = 0.9

[node name="hp_bar" type="ProgressBar" parent="Control"]
layout_mode = 2
offset_right = 4.0
offset_bottom = 27.0
fill_mode = 3
show_percentage = false

[node name="mana_bar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_right = 4.0
offset_bottom = 27.0
fill_mode = 3
show_percentage = false

[node name="xp_bar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_right = 4.0
offset_bottom = 4.0
show_percentage = false
